Fix spacing issue on desktop

--- a/blocks/src/blocks/motion-scroll/style.scss
+++ b/blocks/src/blocks/motion-scroll/style.scss
@@ -189,7 +189,7 @@
 		.motion-scroll-content::after {
 			content: '';
 			display: block;
-			height: 50vh;
+			height: 20vh;
 		}
 	}
 
